# Ess-Python-Exercises

./: README.md  requirements.txt
ex17_package/: README.md  directory_structure.md  main.py  pyproject.toml  test_timer_utility
ex17_package/function_timer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ex17_package/timer_utility/: __init__.py
ex17_package/timer_utility.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ex17_poetry_package/: README.md  main.py  pyproject.toml
ex17_poetry_package/poetry_plot_pack/: poetry_plot.py
ex17_uv_package/: READme.md  main.py  pyproject.toml
ex17_uv_package/plot_decorator_pkg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ex17_uv_package/plot_uv_pkg/: .2026-02-01-file-1.term.sage-chat  .2026-02-01-file-2.x11.sage-chat  .bash_history  2026-02-01-file-1.term  __init__.py  decorator.py
ex17_uv_package/plot_uv_pkg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
