[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timer_utility"
version = "0.1.0"
description = "A simple decorator based package to determine function execution time"
readme = "README.md"
requires-python = ">=3.10"


authors = [
    {name = "Your Name", email = "your@email.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "numpy<2",
]


[project.scripts]
# CommandName = "FileName:FunctionName"
timer-run = "main:main"