[tool.poetry]
name = "poetry_plot_pack"
version = "0.1.0"
description = "Package for decorator to plot functions"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy= "^1.23"
matplotlib = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# This creates a terminal command 'run-plot' that executes main() in main.py
run-plot = "main:main"